--- a/estilo.css
+++ b/estilo.css
@@ -9,18 +9,30 @@ body{
 
 /*Topo do site*/
 header{
+    top: 0;
+    position: fixed;
     background-color: #D13A65;
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 100%;
+    min-height: 0;
 }
 header .barra-pesquisa{
     width: 40%;
     height: 50%;
 }
+header .barra-pesquisa form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+header .barra-pesquisa label{
+    width: 80%;
+    margin-right: 1rem;
+}
 header .barra-pesquisa input{
-    width: 85%;
+    width: 100%;
     height: 50px;
     background-color: #FDF4FA;
     border: none;
@@ -44,5 +56,95 @@ header .barra-pesquisa button{
     justify-content: space-evenly;
 }
 #menu-topo li{
+    cursor: pointer;
+}
+main{
+    background-color: white;
+    width: 100%;
+    min-height: 100vh;
+}
+
+footer{
+    background-color: #D13A65;
+    color: white;
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
+}
+
+/*CADASTRO---------------------------------------------------------------------------*/
+
+.cadastro-login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.cadastrotitulo{
+    color: #D13A65;
+    text-align: center;
+    padding: 3rem 0 1rem;
+}
+.pagina{
+    display: flex;
+	justify-content: center;
+}
+.formulario_cadastro{
+    background-color: #fbf9f8;
+    border: 1px solid #d4d1d1;
+    padding: 1rem; 
+    height: 440px;
+    width: 310px;
+    border-radius: 4px;
+    
+}
+.formulario_login{
+    background-color: #fbf9f8;
+    border: 1px solid #d4d1d1;
+    padding: 1rem; 
+    height: 295;
+    width: 310px;
+    border-radius: 4px;
+}
+.pagina input[type="text"],
+input[type="email"],
+input[type="password"],
+select {
+    background-color: #ffffff;
+	padding: 8px;
+	margin-bottom: 20px;
+    margin-top:3px;
+	width: 100%;
+	font-size: 14px;
+	font-family: 'Open Sans', sans-serif;
+    border: 1px solid #d4d1d1;
+    border-radius: 4px;
+}
+
+.butaocalo{
+    padding: 10px;
+	margin-bottom: 20px;
+    margin-top: 8px;
+	width: 100%;
+    border: 1px solid #d4d1d1;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color:  #d3446d;
+}
+.butaocalo:hover{
+    background-color: #d4708d;
+    cursor: pointer;
+}
+.cap{
+    font-size: 15px;
+    padding: 5px;
+    display: flex;
+    justify-content: flex-end;
+}
+.caa{
+    margin-left: 4px;
+    text-decoration: none;
+    color: rgb(82, 82, 150);
     cursor: pointer;
 }
