--- a/estilo.css
+++ b/estilo.css
@@ -117,11 +117,11 @@ main{
 }
 .bloco-itens{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 23%);
     gap: 30px;
 }
 .itens{
-    height: 32rem;
+    height: 30rem;
     cursor: pointer;
     box-sizing: border-box;
     padding: 1rem;
@@ -131,18 +131,60 @@ main{
 }
 .itens-descricao{
     width: 100%;
-    height: 13rem;
-    background-color: #f0ecec;  
+    height: 11rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    word-wrap: break-word;
+}
+.itens-descricao div{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 }
 .itens:hover{
     box-shadow: 
     2px 0 10px -3px rgba(0, 0, 0, 0.5), /* Sombra à direita */
     -2px 0 10px -3px rgba(0, 0, 0, 0.5); /* Sombra à esquerda */
 }
+.texto-limitado {
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Mostrar apenas 3 linhas de texto */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+/* Estilo base do botão */
+.itens button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 25px;
+    background-color: #FF69B4;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+  }
+  
+  /* Estilo de hover para o botão */
+  .itens button:hover {
+    background-color: #FF1493;
+  }
+  
+  /* Estilo de foco para acessibilidade */
+  .itens button:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(255, 105, 180, 0.8);
+  }
 
 /*Rodapé do site---------------------------------------------------------------------*/
 footer{
-    background-color: #D7D0D7;
+    background-color: #D13A65;
     width: 100%;
     padding: 10px 0;
     text-align: center;
