Mudando as legendas dos produtos

--- a/estilo.css
+++ b/estilo.css
@@ -262,6 +262,6 @@ select {
 .caa{
     margin-left: 4px;
     text-decoration: none;
-    color: rgb(82, 82, 150);
+    color: #FF1493;
     cursor: pointer;
 }
