--- a/estilo.css
+++ b/estilo.css
@@ -58,7 +58,7 @@ header .barra-pesquisa button{
     cursor: pointer;
 }
 main{
-    background-color: #f4f5f7;
+    background-color: #FFF;
     width: 100%;
     min-height: 100vh;
     padding-bottom: 3rem;
@@ -169,18 +169,70 @@ main{
     text-align: center;
     text-decoration: none;
     transition: background-color 0.3s ease;
-  }
+}
   
-  /* Estilo de hover para o botão */
-  .itens button:hover {
+/* Estilo de hover para o botão */
+.itens button:hover {
     background-color: #FF1493;
-  }
+}
   
-  /* Estilo de foco para acessibilidade */
-  .itens button:focus {
+/* Estilo de foco para acessibilidade */
+.itens button:focus {
     outline: none;
     box-shadow: 0 0 5px rgba(255, 105, 180, 0.8);
-  }
+}
+  .carrinho{
+    padding: 1rem 16%;
+}
+.titulo-carrinho{
+    background-color: #FDF4FA;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 1rem;
+}
+.compras-do-carrinho{
+    margin-top: 1rem;
+    width: 100%;
+    display:grid;
+    grid-template-columns: 70% repeat(1, 1fr);
+    gap: 1rem;
+}
+.produtos-carrinho{
+    display: flex;
+    flex-direction: column;
+}
+.pro-carrinho{
+    background-color: #da47a9;
+    width: 100%;
+    height: 15rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+}
+.img-carrinho{
+    width: 15rem;
+    height: 100%;
+    margin-right: 1rem;
+}
+.img-carrinho img{
+    width: 100%;
+    height: 100%;
+}
+.comprar-carrinho{
+    display: flex;
+    flex-direction: column;
+}
+.frete{
+    background-color: #FDF4FA;
+    height: 15rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+.preco{
+    background-color: #FDF4FA;
+    height: 10rem;
+    padding: 1rem;
+}
 
 /*Rodapé do site---------------------------------------------------------------------*/
 footer{
