--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,7 @@
 }
 body{
     background-color: #FDF4FA;
+    font-family: Arial, sans-serif;
 }
 
 /*Topo do site---------------------------------------------------------------------*/
@@ -189,6 +190,19 @@ main{
     display: flex;
     justify-content: space-between;
     padding: 1.5rem 1rem;
+    border-radius: 8px;
+}
+.titulo-carrinho button{
+    background-color: #F07481;
+    border: none;
+    border-radius: 5px;
+    width: 250px;
+    color: #000;
+    padding: 7px;
+    font-size: 16px;
+}
+.titulo-carrinho button:hover {
+    background-color: #ec6472;
 }
 .compras-do-carrinho{
     margin-top: 1rem;
@@ -202,12 +216,13 @@ main{
     flex-direction: column;
 }
 .pro-carrinho{
-    background-color: #da47a9;
+    background-color: #FDF4FA;
     width: 100%;
     height: 15rem;
     padding: 1rem;
     margin-bottom: 1rem;
     display: flex;
+    border-radius: 8px;
 }
 .img-carrinho{
     width: 15rem;
@@ -218,6 +233,11 @@ main{
     width: 100%;
     height: 100%;
 }
+.pro-car-informacoes{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .comprar-carrinho{
     display: flex;
     flex-direction: column;
@@ -227,11 +247,29 @@ main{
     height: 15rem;
     padding: 1rem;
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 8px;
+}
+.input-frete{
+    width: 260px;
+    height: 37px;
+    flex-shrink: 0;
+    border-radius: 12px;
+    border: 1px solid #565151;
+}
+.frete p{
+    margin: 10px 0;
 }
 .preco{
     background-color: #FDF4FA;
     height: 10rem;
     padding: 1rem;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 /*Rodapé do site---------------------------------------------------------------------*/
