--- a/estilo.css
+++ b/estilo.css
@@ -192,12 +192,20 @@ main{
     padding: 1.5rem 1rem;
     border-radius: 8px;
 }
+.titulo-carrinho h2{
+    text-decoration: none;
+    font-size: 24px; /* Define o tamanho da fonte */
+    font-weight: normal;
+}
+.titulo-carrinho a{
+    text-decoration: none;
+    color: #000;
+}
 .titulo-carrinho button{
     background-color: #F07481;
     border: none;
     border-radius: 5px;
     width: 250px;
-    color: #000;
     padding: 7px;
     font-size: 16px;
 }
@@ -237,6 +245,9 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.carrinho-text p{
+    margin-bottom: 10px;
 }
 .comprar-carrinho{
     display: flex;
