--- a/estilo.css
+++ b/estilo.css
@@ -208,6 +208,7 @@ main{
     width: 250px;
     padding: 7px;
     font-size: 16px;
+    cursor: pointer;
 }
 .titulo-carrinho button:hover {
     background-color: #ec6472;
