--- a/estilo.css
+++ b/estilo.css
@@ -267,6 +267,7 @@ main{
 .input-frete{
     width: 260px;
     height: 37px;
+    padding: 8px;
     flex-shrink: 0;
     border-radius: 12px;
     border: 1px solid #565151;
