--- a/estilo.css
+++ b/estilo.css
@@ -284,6 +284,65 @@ main{
     justify-content: space-evenly;
 }
 
+.adicionar-lixeira{
+    display: flex;
+}
+
+.adicionar-carrinho{
+    border: 1px solid #565151;
+    border-radius: 8px;
+    height: 35px;
+    width: 150px;
+    display: flex;
+    padding: 0.1rem;
+    vertical-align: middle;
+}
+
+.adicionar-carrinho button{
+    height: 85%;
+    width: 20%;
+    background-color: #D9D9D9;
+    border: 1px solid #D9D9D9;
+    border-radius: 100%;
+    padding: 0.2rem;
+    
+}
+
+.adicionar-carrinho img{
+    height: 98%;
+    width: 98%;
+}
+
+.adicionar-carrinho p{
+    margin-bottom: auto;
+    margin-top: auto;
+}
+
+.mais{
+    margin-left: auto;
+    margin-right: 26%;
+    margin-bottom: auto;
+    margin-top: auto;
+}
+.menos{
+    margin-right: auto;
+    margin-left: 26%;
+    margin-bottom: auto;
+    margin-top: auto;
+}
+
+.lixeira-carrinho{
+    margin-right: auto;
+    
+}
+
+.lixeira-carrinho img{
+    margin: 2px;
+    height: 70%;
+    width: 88%;
+    
+}
+
 /*Rodapé do site---------------------------------------------------------------------*/
 footer{
     background-color: #D13A65;
