--- a/estilo.css
+++ b/estilo.css
@@ -117,17 +117,32 @@ main{
     margin: 30px 0 50px;
 }
 /* meio do index --------------------------------------------------------------------- */
-.bloco-itens{
+/*.bloco-itens{
     display: grid;
     grid-template-columns: repeat(4, 23%);
     gap: 30px;
-}
+}*/
+
 .itens{
     height: 30rem;
+    width: 100%;
     cursor: pointer;
     box-sizing: border-box;
     padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(4, 23%);
+    gap: 30px;
+    justify-content: center;
 }
+
+
+.itens2{
+    width: 100%;
+    height: 22rem;
+    cursor: pointer;
+    
+}
+
 .itens-img{
     height: 17rem;
 }
@@ -146,10 +161,15 @@ main{
     flex-direction: column;
     justify-content: start;
 }
+
+
+.itens-descricao h1{
+    margin-bottom: 0.5rem;
+}
 .itens:hover{
     box-shadow: 
-    2px 0 10px -3px rgba(0, 0, 0, 0.5), /* Sombra à direita */
-    -2px 0 10px -3px rgba(0, 0, 0, 0.5); /* Sombra à esquerda */
+    2px 0 10px -3px rgba(99, 98, 98, 0.2), /* Sombra à direita */
+    -2px 0 10px -3px rgba(99, 98, 98, 0.2); /* Sombra à esquerda */
 }
 .texto-limitado {
     display: -webkit-box;
