--- a/estilo.css
+++ b/estilo.css
@@ -116,6 +116,7 @@ main{
     font-size: 25px;
     margin: 30px 0 50px;
 }
+/* itens/produtos ---------------------------------------*/
 .bloco-itens{
     display: grid;
     grid-template-columns: repeat(4, 23%);
@@ -143,6 +144,10 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: start;
+}
+a{
+    text-decoration: none;
+    color: #000;
 }
 .itens:hover{
     box-shadow: 
@@ -405,14 +410,14 @@ select {
 
 /* COMPRA ---------------------------------------------------*/
 
-#comprar{
+#visualizar{
     width: 100%;
     min-height: 100vh;
     padding-top: 10vh;
     display: flex;
     justify-content: center;
 }
-.comprarproduto{
+.visualizarproduto{
     background-color: white;
     width: 40%;
     height: 36rem;
@@ -422,11 +427,11 @@ select {
     2px 0 10px -3px rgba(99, 98, 98, 0.2), /* Sombra à direita */
     -2px 0 10px -3px rgba(99, 98, 98, 0.2); /* Sombra à esquerda */;
 }
-.comprarimg{
+.visualizarimg{
     width: 100%;
     height: 25rem;
 }
-.comprarimg img{
+.visualizarimg img{
     width: 100%;
     height: 100%;
 }
