--- a/estilo.css
+++ b/estilo.css
@@ -123,7 +123,7 @@ main{
     gap: 30px;
 }
 .itens{
-    height: 30rem;
+    height: 27rem;
     cursor: pointer;
     box-sizing: border-box;
     padding: 1rem;
@@ -142,6 +142,7 @@ main{
     width: 100%;
     height: 50%;
     display: flex;
+    padding-top: 10px;
     flex-direction: column;
     justify-content: start;
 }
@@ -468,11 +469,11 @@ select {
     text-decoration: none;
     transition: background-color 0.3s ease;
 }
-  
+
 .botao:hover {
     background-color: #FF1493;
 }
-  
+
 /* Estilo de foco para acessibilidade */
 .itens button:focus {
     outline: none;
