--- a/estilo.css
+++ b/estilo.css
@@ -127,6 +127,7 @@ main{
     cursor: pointer;
     box-sizing: border-box;
     padding: 1rem;
+    border: 1px solid rgba(203, 202, 202, 0.451);
 }
 .itens-img{
     height: 17rem;
