--- a/estilo.css
+++ b/estilo.css
@@ -493,3 +493,60 @@ select {
 .descricao{
     margin: 4px;
 }
+
+/* Paginas dos Produtos */
+.todos-produtos{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.bloco-itenspg{
+    display: grid;
+    grid-template-columns: repeat(6, 15%);
+    gap: 30px;
+}
+.itenspg{
+    height: 27rem;
+    cursor: pointer;
+    box-sizing: border-box;
+    padding: 1rem;
+    border: 1px solid rgba(203, 202, 202, 0.451);
+}
+.itens-imgpg{
+    height: 17rem;
+    background-color: #D13A65;
+}
+.itens-imgpg img{
+    width: 100%;
+    height: 100%;
+}
+.itens-descricaopg{
+    width: 100%;
+    height: 11rem;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+}
+.itens-descricaopg div{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    padding-top: 10px;
+    flex-direction: column;
+    justify-content: start;
+}
+a{
+    text-decoration: none;
+    color: #000;
+}
+.itenspg:hover{
+    box-shadow: 
+    2px 0 10px -3px rgba(99, 98, 98, 0.2), /* Sombra à direita */
+    -2px 0 10px -3px rgba(99, 98, 98, 0.2); /* Sombra à esquerda */
+}
+.texto-limitadopg {
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Mostrar apenas 3 linhas de texto */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
