--- a/estilo.css
+++ b/estilo.css
@@ -322,7 +322,11 @@ a{
     margin: 2px;
     height: 70%;
     width: 88%;
-    
+}
+
+/*Favoritos ---------------------------------------------------------------------*/
+.favoritos{
+    padding: 1rem 16%;
 }
 
 /*Rodapé do site---------------------------------------------------------------------*/
