--- a/estilo.css
+++ b/estilo.css
@@ -504,46 +504,9 @@ select {
     padding-top: 1rem;
     gap: 30px;
 }
-.itenspg{
-    height: 27rem;
-    cursor: pointer;
-    box-sizing: border-box;
-    padding: 1rem;
-    border: 1px solid rgba(203, 202, 202, 0.451);
-}
-.itens-imgpg{
-    height: 17rem;
-    background-color: #D13A65;
-}
-.itens-imgpg img{
+.bloco-itenspg img{
     width: 100%;
     height: 100%;
-}
-.itens-descricaopg{
-    width: 100%;
-    height: 11rem;
-    display: flex;
-    flex-direction: column;
-    word-wrap: break-word;
-}
-.itens-descricaopg div{
-    width: 100%;
-    height: 50%;
-    display: flex;
-    padding-top: 10px;
-    flex-direction: column;
-    justify-content: start;
-}
-.itenspg:hover{
-    box-shadow: 
-    2px 0 10px -3px rgba(99, 98, 98, 0.2), /* Sombra à direita */
-    -2px 0 10px -3px rgba(99, 98, 98, 0.2); /* Sombra à esquerda */
-}
-.texto-limitadopg {
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* Mostrar apenas 3 linhas de texto */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
 }
 
 /*Favoritos ---------------------------------------------------------------------*/
@@ -558,44 +521,7 @@ select {
     padding-top: 1rem;
     gap: 2rem;
 }
-.itensf{
-    height: 27rem;
-    cursor: pointer;
-    box-sizing: border-box;
-    padding: 1rem;
-    border: 1px solid rgba(203, 202, 202, 0.451);
-}
-.itens-imgf{
-    height: 17rem;
-    background-color: #D13A65;
-}
-.itens-imgf img{
+.bloco-itensf img{
     width: 100%;
     height: 100%;
-}
-.itens-descricaof{
-    width: 100%;
-    height: 11rem;
-    display: flex;
-    flex-direction: column;
-    word-wrap: break-word;
-}
-.itens-descricaof div{
-    width: 100%;
-    height: 50%;
-    display: flex;
-    padding-top: 10px;
-    flex-direction: column;
-    justify-content: start;
-}
-.itensf:hover{
-    box-shadow: 
-    2px 0 10px -3px rgba(99, 98, 98, 0.2), /* Sombra à direita */
-    -2px 0 10px -3px rgba(99, 98, 98, 0.2); /* Sombra à esquerda */
-}
-.texto-limitadof {
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* Mostrar apenas 3 linhas de texto */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
 }
